dynamic title and layout

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title,'Home title')%>
-<h1>Training App for help page</h1>
+<h1>Training App US for help page</h1>
 <p>
   This is the home page for the
   <a href="http://github.com/ezzie">Ruby on Rails Training</a>
